LabOrchestrator Model Updated